2010-05-15	Chris Johns <chrisj@rtems.org>

	* libfs/src/imfs/imfs_initsupp.c, libfs/src/imfs/imfs.h,
	libfs/src/imfs/imfs_stat.c: PR1419. Return a device for the IMFS.

2010-05-14	Chris Johns <chrisj@rtems.org>

	* libblock/src/flashdisk.c: Clean up on initialisation errors.
	
2010-05-07	Arnout Vandecappelle <arnout@mind.be>

	PR 1511/networking
	* ftpd/ftpd.c: Abort RETR for directories.

2010-05-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h: New define CONFIGURE_SEMAPHORES for the
	overall count of required semaphores.  New define
	CONFIGURE_LIBBLOCK_SEMAPHORES for the count of required disk and bdbuf
	semaphores.

2010-05-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add missing "&&".

2010-05-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/Makefile.am: Add libcsupport/src/flockfile.c,
	libcsupport/src/ftrylockfile.c, libcsupport/src/funlockfile.c.
	* libcsupport/src/flockfile.c, libcsupport/src/ftrylockfile.c,
	libcsupport/src/funlockfile.c: New (stub functions).

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio_.h, libcsupport/src/envlock.c,
	libcsupport/src/libio.c: Added and use rtems_libio_lock() and
	rtems_libio_unlock().  Cleaned up includes and declarations.  Do not
	use RTEMS_NO_PRIORITY for unused ceiling priority in
	rtems_semaphore_create().

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/lib/ftpfs.c: Format changes.  Fixed pathname
	allocation in rtems_ftpfs_eval_path().  Send QUIT command during
	file close.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/msdos_format.c: Added missing va_end().

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/src/bdpart.c: Removed file.
	* libblock/src/bdpart-create.c, libblock/src/bdpart-dump.c,
	libblock/src/bdpart-mount.c, libblock/src/bdpart-read.c,